# alphanso-numba

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alphanso/: __init__.py  __main__.py  atomic_data_loader.py  constants.py  data_manager.py  output_files.py  parsers.py  sources_parsers.py  transport.py  utils.py
alphanso/data/: sources_overrides.yaml
alphanso/data/atomic_data/: atomic_data.json  atomic_data_loader.py  element_symbols.json  metadata.json  natural_abundances.json
example_usage/: example_config_beam.yaml  example_config_homogeneous.yaml  example_config_interface.yaml  example_config_sandwich.yaml  example_script.py
tests/: __init__.py  conftest.py  test_output_files.py
tests/ground_truth/: __init__.py  generate_ground_truth.py
tests/ground_truth/results/: beam.json  homogeneous.json  interface.json  sandwich.json
tests/integration/: configs.py  test_beam.py  test_continuum.py  test_data_dir.py  test_homogeneous.py  test_interface.py  test_sandwich.py  test_sandwich_interface_equivalence.py
tests/utils/: comparison.py
